PixelWalker copy bot changelog

2025-11-14 Version 1.14.0
- Website: MIDI Import now supports guitar notes.

2025-11-13 Version 1.13.0
- Website: MIDI Import now supports drum notes.

2025-11-10 Version 1.12.3
- Website: Fix bad drum note mapping for EELVL Import/Export.

2025-11-09 Version 1.12.2
- Website: Remove "Optimize colors for faster placement" option from PNG Import.

2025-11-08 Version 1.12.1
- Bot: When bot or player joins the world, "[BOT] Copy Bot is here! Type .help to show usage!" is now only sent to world owner.

2025-11-07 Version 1.12.0
- Bot: .smartpaste now applies smart pasting logic for portal ids that have numbers and letters. For ex.: a1, a2 -> a3.
- Bot: Improved .mask command error messages when using invalid mask modes.

2025-10-25 Version 1.11.0
- Website: Added "Blocks that couldn't be converted" section for EELVL import/export. This section appears after import/export if there were blocks that couldn't be converted 1 to 1 between EEO and PW.

2025-10-25 Version 1.10.0
- Bot: Added .mask command 'nonair' parameter.
- Bot: Renamed .mask command 'all' parameter to 'default'.

2025-10-19 Version 1.9.0
- Bot: Added command ".flip [h | v]" - flips selected blocks horizontally or vertically.

2025-10-19 Version 1.8.4
- Website: Fix "error loading dynamically imported module" errors.
- Website: Make navigation between tabs and disconnect instant.

2025-10-18 Version 1.8.3
- Bot: Improve error messages for .import command.
- Website: Fix in game errors (such as bad command usage) being shown in website as error alerts.

2025-10-11 Version 1.8.2
- Bot: Updated to work with PixelWalker version 0.26.1-alpha

2025-10-01 Version 1.8.1
- Bot: Fixed .edit command in some cases not pasting edited blocks at correct location.

2025-09-12 Version 1.8.0
- Bot: Improved .paste and .smartpaste commands, by immediately pasting repeated blocks.